Added a bit more structure to the bustup/cutin flyouts.

--- a/src/gui/EditorWindow/TimelinePanel/TimelinePanel.axaml
+++ b/src/gui/EditorWindow/TimelinePanel/TimelinePanel.axaml
@@ -1524,7 +1524,11 @@
                   <Button ToolTip.Tip="{Binding BustupPath}" IsVisible="{Binding Bustup, Converter={x:Static ObjectConverters.IsNotNull}}">
                     <Button.Flyout>
                       <Flyout>
-                        <Image Source="{Binding Bustup, Converter={StaticResource ToBitmap}}" MaxWidth="600"/>
+                        <StackPanel Classes="form">
+                          <TextBlock Classes="formtitle" Text="Bustup"/>
+                          <Separator Classes="formtitle"/>
+                          <Image Source="{Binding Bustup, Converter={StaticResource ToBitmap}}" MaxWidth="600"/>
+                        </StackPanel>
                       </Flyout>
                     </Button.Flyout>
                     <PathIcon Data="{StaticResource person_voice_regular}" />
@@ -1532,7 +1536,11 @@
                   <Button ToolTip.Tip="{Binding CutinPath}" IsVisible="{Binding Cutin, Converter={x:Static ObjectConverters.IsNotNull}}">
                     <Button.Flyout>
                       <Flyout>
-                        <Image Source="{Binding Cutin, Converter={StaticResource ToBitmap}}" MaxWidth="600"/>
+                        <StackPanel Classes="form">
+                          <TextBlock Classes="formtitle" Text="Cutin"/>
+                          <Separator Classes="formtitle"/>
+                          <Image Source="{Binding Cutin, Converter={StaticResource ToBitmap}}" MaxWidth="600"/>
+                        </StackPanel>
                       </Flyout>
                     </Button.Flyout>
                     <PathIcon Data="{StaticResource cut_regular}" />
